# umba-roboconf

./: .gitignore  .md-pp.options  CMakeLists.txt  README.md  README.md_  _start_code.bat  clean-generated.bat  clean_built.bat  clean_built_gcc.bat  clean_built_msvc.bat  clear_exes.bat  create_distr_folderes.bat  cube2cmp.vcxproj  deploy_binaries.bat  deploy_conf.bat  deploy_conf_impl.bat  deploy_conf_libs_rules.bat  deploy_datasheets.bat  deploy_datasheets_impl.bat  deploy_for_debug.bat  deploy_for_debug_wlog.bat  deploy_libs.bat  deploy_libs_impl.bat  deploy_local.bat  deploy_local_wlog.bat  deploy_rules.bat  deploy_rules_impl.bat  enc_det_test.vcxproj  enc_det_test.vcxproj.filters  gen-doc.bat  get_tracy.bat  make_distr.bat  make_distr_new.bat  make_distr_new_wlog.bat  make_distr_wlog.bat  roboconf.sln  roboconf.vcxproj  roboconf_msvc2017.sln  roboconf_msvc2019.sln  roboconf_msvc2022.sln  (+4 more)
.msvc2017/: _all.vcxproj  _umba-roboconf-only.vcxproj  cube2cmp.vcxproj  umba-roboconf.vcxproj
.msvc2019/: _all.vcxproj  _umba-roboconf-only.vcxproj  sm32_pa_gen.vcxproj  umba-roboconf.vcxproj
.msvc2022/: _all.vcxproj  _umba-roboconf-only.vcxproj  sm32_pa_gen.vcxproj  umba-roboconf.vcxproj
_libs.3dp.archive/: pdflib.7z
_prj_cmake/: CMakeLists.txt
_prj_msvc2017/: cube2cmp.vcxproj  enc_det_test.vcxproj  sm32_pa_gen.vcxproj  umba-roboconf.vcxproj
_prj_msvc2019/: cube2cmp.vcxproj  enc_det_test.vcxproj  sm32_pa_gen.vcxproj  umba-roboconf.vcxproj
_prj_msvc2022/: cube2cmp.vcxproj  enc_det_test.vcxproj  sm32_pa_gen.vcxproj  umba-roboconf.vcxproj
components_from_csv/: 74HC4067DB_corrected.csv  74HC4067DB_org.csv  AD8656ARM.csv  ADS8867IDGS.csv  FLASH_NAND_2GB_MT29F2G08ABAEAWP-IT.csv  INA152.csv  INA168.csv  INA818IDR.csv  LM4040AIM3.csv  M24512W.csv  MAX17502GXX.csv  TPS62172DSG.csv  TPS71533DCKR.csv  clear_cmp.bat  convert.bat  deploy_libs.bat
conf/: component-alias-db.custom.txt  component-alias-db.txt  datasheet-alias-db.txt  roboconf.options  roboconf.options.1119-SEMUHIN_МартыновАГ  umba-roboconf.options
data/: Teleshina_Foot_Board.NET  Teleshina_Hot_End.NET  Teleshina_Main_Board.NET
doc/: hw_init.txt  interfaces.txt  links.txt  perf_notes.txt  performance_notes.txt  readme_vscode.md  roboconf-cli-options.txt  sch-design-rules.md  todo.md  tracy.txt  useful_things.txt  vss-vdd.txt
doc.md/: notes.md_  regex.md_  rul_rules_templates.md_  rul_user_rules.md_  rules.md_
icons/: .gitignore  links.txt
lib/: .gitignore  74HC4067DB.cmp  AD8541.cmp  AD8542.cmp  AD8544.cmp  AD8656ARM.cmp  ADA4430.cmp  ADG1604.cmp  ADG819.cmp  ADM3485E.cmp  ADM7150.cmp  ADM7154.cmp  ADS8867IDGS.cmp  APC220.cmp  AS5040.cmp  AS5145.cmp  BC846.cmp  CP2104.cmp  CP2105.cmp  DRV8301.cmp  DRV8432.cmp  DRV8832.cmp  HSCSSNN001PD2A3.cmp  INA137.cmp  INA152.cmp  INA168.cmp  INA818IDR.cmp  IRF7509.cmp  IRLML0030.cmp  IRLML0060.cmp  IRLML2244.cmp  IRLML2502.cmp  IRLML6402.cmp  ISO1050.cmp  ISO1050DUB-DUB8.cmp  ISO1050DW-DW16.cmp  LM1117.cmp  LM3414.cmp  LM4040AIM3.cmp  LM49270.cmp  (+24 more)
lib-cube/: STM32F030C6-LQFP48.cmp  STM32F030C6.cmp  STM32F030C8-LQFP48.cmp  STM32F030C8.cmp  STM32F030CC-LQFP48.cmp  STM32F030CC.cmp  STM32F030F4-TSSOP20.cmp  STM32F030K6-LQFP32.cmp  STM32F030K6.cmp  STM32F030R8-LQFP64.cmp  STM32F030R8.cmp  STM32F030RC-LQFP64.cmp  STM32F030RC.cmp  STM32F031C4-LQFP48.cmp  STM32F031C4.cmp  STM32F031C6-LQFP48.cmp  STM32F031C6.cmp  STM32F031E6-WLCSP25.cmp  STM32F031F4-TSSOP20.cmp  STM32F031F6-TSSOP20.cmp  STM32F031G4-UFQFPN28.cmp  STM32F031G6-UFQFPN28.cmp  STM32F031K4-UFQFPN32.cmp  STM32F031K6-LQFP32.cmp  STM32F031K6-UFQFPN32.cmp  STM32F031K6.cmp  STM32F038C6-LQFP48.cmp  STM32F038C6.cmp  STM32F038E6-WLCSP25.cmp  STM32F038F6-TSSOP20.cmp  STM32F038G6-UFQFPN28.cmp  STM32F038K6-UFQFPN32.cmp  STM32F042C4-LQFP48.cmp  STM32F042C4-UFQFPN48.cmp  STM32F042C4.cmp  STM32F042C6-LQFP48.cmp  STM32F042C6-UFQFPN48.cmp  STM32F042C6.cmp  STM32F042F4-TSSOP20.cmp  STM32F042F6-TSSOP20.cmp  (+1819 more)
lib-user/: ENDSTOP-user.cmp  ESC-user.cmp  HSCSSNN001PD-SIP-user.cmp  RESISTOR_X8-user.cmp  SD-CARD-user.cmp  SERVO-user.cmp  STM32-user.cmp  USD-CARD-user.cmp
lib-user_prev/: AD854_-user.cmp  AS5145-user.cmp  BATTERYKOROL-user.cmp  CMXDM7002A-user.cmp  DRV8832-user.cmp  HSCSSNN001PD-SIP4-user.cmp  HSCSSNN001PD-user.cmp  LM3414-user.cmp  LM60-user.cmp  LSM9DS1-user.cmp  MAX31855-user.cmp  MAX991_-user.cmp  MAX9920-user.cmp  RESISTOR_X4-user.cmp  SN65HVD178_-SOIC8-user.cmp  SN65HVD23_-SOIC8-user.cmp  SN65HVD23_-user.cmp  STM32-user.cmp  STM32F303_B-LQFP48-user.cmp  TPD2S017-user.cmp
lib_prev/: 2N7002.cmp  40PC______.cmp  AD806_.cmp  AD854_.cmp  ADA4430-SOT23.cmp  ADA4430.cmp  ADG1604-TSSOP14.cmp  ADG1604.cmp  ADG160_.cmp  ADM3485E.cmp  ADM7150.cmp  ADM7154.cmp  AS5145.cmp  CAT4237-TSOT23.cmp  CAT4237.cmp  CMXDM7002A.cmp  CP2104.cmp  CSD19532Q5B.cmp  DRV104.cmp  DRV8301.cmp  DRV8832.cmp  FDN5618P.cmp  HDC1080.cmp  INA137.cmp  INA19_.cmp  INA21_.cmp  IRF7509.cmp  IRLML0030.cmp  IRLML0060.cmp  IRLML2244.cmp  ISL31__E.cmp  LM1117.cmp  LM3414.cmp  LM60.cmp  LMR16006.cmp  LMZ14203.cmp  LSM9DS1.cmp  MAX2_3.cmp  MAX309_E.cmp  MAX31855.cmp  (+29 more)
rules/: copyConf.bat  default.rul  default_classes.rul  default_new.rul  default_old.rul  default_packages.rul  default_power.rul  deploy_rules.bat
scripts/: .gitignore  create_distr_folders_impl.bat  deploy_binaries_impl.bat  deploy_conf_impl.bat  deploy_datasheets_impl.bat  deploy_icons_impl.bat  deploy_libs_impl.bat  deploy_rules_impl.bat  detect_compiled_path.bat  setup_kits_sample.bat  setup_local_datasheets_sample.bat  setup_local_sample.bat  setup_path_qt5_compiler_32_sample.bat  setup_path_qt5_compiler_64_sample.bat
src/: _todo.txt  _whats_done.txt  base64.h  component.cpp  component.h  component_alias_db.h  component_class.cpp  component_class.h  component_handlers.h  config.h  connections.h  connections_types.h  cpp.h  csv.h  cube2cmp.cpp  cube2cmp_bak.cpp  cubeXmlParsing.h  datacheetDb.h  datacheetUtils.h  datasheet.h  designator.h  detail_levels.h  elapsed_timer.h  enc_det_test.cpp  encoding.cpp  encoding.h  file_set.h  icUtils.h  import_cubes.txt  incsearch.h  interfaces.h  ioUtils.h  (+53 more)
(+360 files in other folders)
